<resources>
    <string name="app_name">CorrectorpH</string>

    <!-- MAIN ACTIVITY-->
    <string name="tv_carbonato">Carbonatos</string>
    <string name="tv_bicarbonato">Bicarbonatos</string>
    <string name="et_carbonato">Lectura de inyectadora, en ml.</string>
    <string name="et_bicarbonato">Lectura de inyectadora, en ml.</string>
    <string name="et_carbonato2">milimolc/l de reporte análisis.</string>
    <string name="et_bicarbonato2">milimolc/l de reporte análisis.</string>
    <string name="btn_ph7">pH 7.0</string>
    <string name="btn_ph6">pH 6.0</string>
    <string name="btn_ph5_5">pH 5.5</string>
    <string name="btn_ph5">pH 5.0</string>
    <string name="btn_ph4">pH 4.0</string>
    <string name="btn_ph2">pH 2.0</string>
    <string name="tv_cacladora">Ingresa los siguientes datos</string>
    <string name="tv_resultado">Aplicar, pHplus o pH PREMIUM 4/5 en las cantidades, indicadas a continuación:</string>
    <string name="tv600">Resultado 600 lts</string>
    <string name="tv400"> Resultado 400 lts</string>
    <string name="tv200"> Resultado 200 lts</string>
    <string name="tv20"> Resultado 20 lts</string>
    <string name="tv_resultadosmmol">Esta correción de pH, equivale a:</string>
    <string name="tvmmol"> Resultado mmol/L</string>
    <string name="tvmgl"> Resultado mg/L o g/m3</string>
    <string name="tvporcentaje"> Resultado %</string>
    <string name="tvkgha"> Resultado kg/ha</string>
    <string name="tv_tituloCalculadora">Calculos con Kit de Campo</string>
    <string name="tv_tituloCalculadoraAgua">Calculos para Aguas</string>

    <!-- VERIFICACIONES-->
    <string name="tv_verificaciones">Verificaciones con kit de campo</string>
    <string name="tvph7">Agregue a la muestra, del agua corregida, la gota del indicador para BICARBONATOS y obtendría el color del recuadro lateral. Agregue 4 gotas del reactivo 1 y deberá obtener el cambio de color.</string>
    <string name="tvph6">Agregue a la muestra, del agua corregida, la gota del indicador para BICARBONATOS y obtendría el color del recuadro lateral. Agregue 2 gotas del reactivo 1 y deberá obtener el cambio de color.</string>
    <string name="tvph5_5">Agregue a la muestra, del agua corregida, la gota del indicador para BICARBONATOS y obtendría el color del recuadro lateral. Agregue 1 gotas del reactivo 1 y deberá obtener el cambio de color.</string>
    <string name="tvph5">Agregue a la muestra, del agua corregida, la gota del indicador para BICARBONATOS y obtendría el color del recuadro lateral, o sea, de una vez, se obtiene el color rosado, indicativo de ausencia de BICARBONATOS.</string>
    <string name="tvph4">Agregue a la muestra, del agua corregida, la gota del indicador para BICARBONATOS y obtendría el color del recuadro lateral, o sea, de una vez, se obtiene el color rojo, indicativo de ausencia de BICARBONATOS.</string>
    <string name="tvph2">Agregue a la muestra, del agua corregida, la gota del indicador para BICARBONATOS y obtendría el color del recuadro lateral, o sea, de una vez, se obtiene el color rojo intenso, indicativo de ausencia de BICARBONATOS.</string>
    <string name="tv_aph7">pH 7.0</string>
    <string name="tv_aph6">pH 6.0</string>
    <string name="tv_aph5_5">pH 5.5</string>
    <string name="tv_aph5">pH 5.0</string>
    <string name="tv_aph4">pH 4.0</string>
    <string name="tv_aph2">pH 2.0</string>
    <string name="tv_instrucciones">Las verificaciones con Kit de campo, consiste, como tal, verificar que, con la cantidad de ácido calculada y aplicada, se obtuvo el pH deseado, en el agua corregida.</string>
    <string name="tv_instrucciones2">Asi que para cada pH, se indica, las gotas de reactivo 1, a aplicar:</string>

    <!-- PRODUCTOS RECOMENDADOS-->
    <string name="tv_productos">Productos Recomendados</string>
    <string name="btn_productos">Ver referencias</string>
    <string name="tv_productosph7">Productos a pH 7.0</string>

    <string-array name="productosph7">
        <item>FUNGICIDAS: Carbendazin (DEROSAL; CROPZIM) (pH 5-7); Mancozeb; Azoxystrobin (AMISTAR) (pH no afecta).</item>
        <item>INSECTICIDAS: Triflumuron (Alsystin) (pH 5-7); Deltametrina (DECIS) pH 5-7).</item>
    </string-array>

    <string name="tv_descripcionph7">FUNGICIDAS: Carbendazin (DEROSAL; CROPZIM) (pH 5-7); Mancozeb; Azoxystrobin (AMISTAR) (pH no afecta).</string>
    <string name="tv_descripcionph7_2"> INSECTICIDAS: Triflumuron (Alsystin) (pH 5-7); Deltametrina (DECIS) pH 5-7)</string>

    <string name="tv_productosph6">Productos a pH 6.0</string>
    <string-array name="productosph6">
        <item>FUNGICIDAS: Kasumin.</item>
        <item>FERTILIZANTES: Aplicar Humus Humico al suelo.</item>
        <item>INSECTICIDAS: i.a Friponil (Fripokill) y i.a. Metomilo (Mercamil) estables  pH 5,0 a 7,0; i.a. Lambda-cyhalotrina (KARATE 500ml/ha).</item>
        <item>INSECTICIDAS BIOLOGICOS: Bacillus Thuringuiensis (Bt-Ven).</item>
    </string-array>

    <string name="tv_descripcionph6">FUNGICIDAS: Kasumin.</string>
    <string name="tv_descripcionph6_2">FERTILIZANTES: Aplicar Humus Humico al suelo. </string>
    <string name="tv_descripcionph6_3">INSECTICIDAS: i.a Friponil (Fripokill) y i.a. Metomilo (Mercamil) estables  pH 5,0 a 7,0; i.a. Lambda-cyhalotrina (KARATE 500ml/ha).</string>
    <string name="tv_descripcionph6_4">INSECTICIDAS BIOLOGICOS: Bacillus Thuringuiensis (Bt-Ven).</string>
    <string name="tv_productosph5_5">Productos a pH 5.5</string>
    <string name="tv_descripcionph5_5">Agua para riego y/o Abono foliar:  NITRO CaMgBMo, Fertiverbor.</string>
    <string name="tv_descripcionph5_5_2">HERBICIDAS i.a. Atrazina (Gesaprim, Atranex, Triazol);Celtic 25 S (i.a. Quinclorac pHs.i.; i.a. Picloran+2,4,D (Combatran).</string>
    <string name="tv_descripcionph5_5_3">FUNGICIDAS: i.a. Clomazone (Command 4,pH 5,0a9,0); (ACCENT) i.a Nicosulfuron (estable a pH 7,0 a 9,0, pero, aún a 5,0, DT50, 15 días). </string>
    <string name="tv_descripcionph5_5_4">QUIMICO:i.a. Metalaxil (Ridomil); Combinado con fertilizante foliar: Carbendazin (Derosal; Cropzim) (pH 5-7) Propiconazole (Tilt) (pH 5-6).</string>
    <string name="tv_productosph5">Productos a pH 5.0</string>
    <string name="tv_descripcionph5">FUNGICIDAS; i.a. Mancozeb (Dthane, manzate) i.a. Captan (Captan) i.a.Benomil (Benlate) i.a. Mancozeb+cimozanil (Curazim).</string>
    <string name="tv_descripcionph5_2">INSECTICIDAS: i.a. Amitraz (Mitac); i,a, Clorpirifos (Pirinex, Lorsban 4E): i.a.Dimetoato (Difós 40ce).</string>
    <string name="tv_descripcionph5_3">HERBICIDAS:  i.a. Fluazifop-p-butil (H1 2000; 500 ml/ha 3 hojas; 1,0 l/ha + 3 hojas) exige pH 5,0. i.a. Paraquat (Gramoxone,Gramafin, Gramaquat) i.a. Oxifluorfen (GOAL).</string>
    <string name="tv_descripcionph5_4">HUMUS FULVICOS FOLIARES: Propanil+2,4D+ Pendimethalin (Prowl, Garra) (estables 5,0 a 9,0) Pendimethalin (Prowl 4,0 l/ha) (estables 5,0 a 9,0). </string>
    <string name="tv_productosph4">Productos a pH 4.0</string>
    <string name="tv_descripcionph4"> HERBICIDAS: i.a. Glifosate (GLYFOSAN, ROUNDUP, TOUCHDOWN). i.a. Metribuzin (SENCOR)</string>
    <string name="tv_ph2">pH 2.0 se recomienda para:</string>
    <string name="tv_descripcionph2">Limpiar las cintas de riego. Las cintas de riego deberian mantenerse limpias mas tiempo si aplica el agua de riego a pH 5.5. Tenga siempre la precaucion de no dejar incrustar las cintas, para someterla a la limpieza de altas concentraciones de acido, por los motivos que pueden causar desequilibrios en la solucion del suelo.</string>
    <string name="tv_vacio"></string>


    <!-- ACERCA DE FILAGRO-->
    <string name="tv_descripcionfilagro">Empresa dedicada al desarrollo y comercialización de insumos y servicios Agrícolas.</string>
    <string name="btn_twitter">twitter</string>
    <string name="btn_instagram">instagram</string>
    <string name="iv_mail">filagro01@gmail.com</string>
    <string name="tv_descripcionfilagro2">Comercialización de productos de calidad con buen soporte técnico.</string>
    <string name="tv_descripcionfilagro3">Servicios de asesoría y acompañamiento en proyectos agrícolas.</string>
    <string name="tv_phplus">Favorece la estabilidad y eficacia de la mayoría de los plaguicidas.</string>
    <string name="tv_phplus2">Ayuda a la acción de los herbicidas de amplio espectro.</string>
    <string name="tv_phplus3">Eleva la eficiencia de la fertilizacion foliar.</string>
    <string name="tv_phplus4">Neutraliza la turbidez del agua.</string>
    <string name="tv_phplus5">Corrige la dureza del agua.</string>
    <string name="tv_phplus6">Favorece la estabilidad y eficacia de los fertilizantes en el fertirriego.</string>
    <string name="tv_phplus7">Limpia las cintas de goteo de las incrustaciones de sales.</string>
    <string name="tv_titulophplus">pHplus</string>
    <string name="tv_productosfilagro">Productos</string>
    <string name="tv_redessociales">Redes Sociales</string>
    <string name="tv_titulophpremium">pHpremium</string>


    <!-- BOTONES -->
    <string name="txt_twitter">Twitter</string>
    <string name="txt_instagram">Instagram</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_email">Email</string>

    <!-- SPLASH SCREEN -->
    <string name="tv_titulo">Cálculos de corrector de pH</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
