<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    tools:context=".FragmentsPrincipales.Calculadora">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/tv_TituloCalculadoraAgua"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_tituloCalculadora"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="#000"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                app:cardPreventCornerOverlap="true"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="#7e1795ee">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_calculadora"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_cacladora"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_carbonato"
                        android:layout_marginLeft="10dp"
                        android:textSize="16sp"
                        android:textColor="#fff"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/et_carbonatos"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginLeft="8dp"
                        android:hint="@string/et_carbonato"
                        android:inputType="numberDecimal"
                        android:textSize="18sp"
                        android:paddingStart="10dp"
                        android:paddingEnd="2dp"
                        android:background="@drawable/edittext"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_bicarbonato"
                        android:layout_marginLeft="10dp"
                        android:textSize="16sp"
                        android:textColor="#fff"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/et_bicarbonatos"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginLeft="8dp"
                        android:hint="@string/et_bicarbonato"
                        android:inputType="numberDecimal"
                        android:textSize="18sp"
                        android:paddingStart="10dp"
                        android:paddingEnd="2dp"
                        android:background="@drawable/edittext" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/btn7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_ph7"
                    android:background="@drawable/botones_seleccion"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_ph6"
                    android:background="@drawable/botones_seleccion"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:id="@+id/btn5_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_ph5_5"
                    android:background="@drawable/botones_seleccion"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp">

                <Button
                    android:id="@+id/btn5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_ph5"
                    android:background="@drawable/botones_seleccion"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_ph4"
                    android:background="@drawable/botones_seleccion"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_ph2"
                    android:background="@drawable/botones_seleccion"/>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="6dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="12dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="12sp">

                    <TextView
                        android:id="@+id/tv_resultado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_resultado"
                        android:textColor="#000"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/tv_600"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/tv_400"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/tv_200"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/tv_20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/tv_litro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_resultadosmmol"
                        android:textSize="18sp"
                        android:layout_marginTop="10dp"
                        android:textColor="#000"/>

                    <TextView
                        android:id="@+id/tv_mmol"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/tv_mgl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/tv_porcentaje"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/tv_kgha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>